--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ psycopg2-binary==2.9.10
 flake8==7.2.0
 black==25.1.0
 isort==6.0.1
+djoser==2.3.1
+djangorestframework-simplejwt==5.5.0
+PyJWT==2.9.0
