--- a/docker/local/django/Dockerfile
+++ b/docker/local/django/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.13.0-slim-buster
+FROM python:3.13-slim
 
 ENV APP_HOME=/app
 RUN mkdir $APP_HOME
@@ -16,7 +16,7 @@ RUN apt-get update \
   && apt-get install -y build-essential \
   && apt-get install -y libpq-dev \
   && apt-get install -y gettext \
-  && apt-get -y install netcat gcc postgresql \
+  && apt-get -y install netcat-openbsd gcc postgresql \
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
 
@@ -30,16 +30,8 @@ COPY ./docker/local/django/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
 RUN chmod +x /entrypoint
 
-COPY ./docker/local/django/entrypoint /start
+COPY ./docker/local/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
-
-COPY ./docker/local/django/celery/worker/start /start-celeryworker
-RUN sed -i 's/\r$//g' /start-celeryworker
-RUN chmod +x /start-celeryworker
-
-COPY ./docker/local/django/celery/worker/start /start-flower
-RUN sed -i 's/\r$//g' /start-flower
-RUN chmod +x /start-flower
 
 ENTRYPOINT [ "/entrypoint"]
