--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
             - .env
         depends_on:
             - postgres-db
+            - redis
         networks:
             - estate-react
 
@@ -28,6 +29,46 @@ services:
         networks:
             - estate-react
     
+    redis:
+        image: redis:8.2.1-alpine
+        networks:
+            - estate-react
+    
+    celery-worker:
+        build:
+            context: .
+            dockerfile: ./docker/local/django/Dockerfile
+        command: /start-celeryworker
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+        depends_on:
+            - redis
+            - postgres-db
+        networks:
+            - estate-react
+
+    flower:
+        build:
+            context: .
+            dockerfile: ./docker/local/django/Dockerfile
+        command: >
+            celery -A real_estate flower
+            --broker=redis://redis:6379/0
+            --port=5555
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+        ports:
+            - "5557:5555"
+        depends_on:
+            - redis
+            - celery-worker
+            - postgres-db
+        networks:
+            - estate-react
     nginx:
         restart: always
         depends_on:
